[project]
name = "typed-args"
version = "0.6.5"
description = "Parse command line arguments by defining dataclasses"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["argparse", "cli"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "icecream",
]
