[project]
name = "typed-args"
version = "0.6.5"
description = "Parse command line arguments by defining dataclasses"
readme = "README.md"
requires-python = ">=3.6"
authors = [{ name = "SunDoge", email = "triplez0@outlook.com" }]
keywords = ["argparse", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic>=1.7.4",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0.1",
]
